syntax = "proto3";

package packet;

message msg{
	repeated bytes value = 1;
}

message Server{
	uint32 id = 1;
	string ip = 2;
	uint32 port = 3;
}

message Datacenter{
	uint32 id = 1;
	string metadata_server_ip = 2;
	uint32 metadata_server_port = 3;
	repeated Server servers = 4;
}

message Placement{
	string protocol = 1;
	repeated uint32 servers = 2;
	repeated uint32 q1 = 3;
	repeated uint32 q2 = 4;
	uint32 f = 5;
	uint32 m = 6;
	uint32 k = 7;
	repeated uint32 q3 = 8;
	repeated uint32 q4 = 9;
}

message GroupConfig{
	uint32 object_size = 1;
	uint64 num_objects = 2;
	double arrival_rate = 3;
	double read_ratio = 4;
	uint64 duration = 5;
	repeated bytes keys = 6;
	repeated double client_dist = 7;
	Placement placement_p = 8;

}

message Group{
	uint64 timestamp = 1;
	uint32 id = 2;
	repeated uint32 grp_id = 3;
	repeated GroupConfig grp_config = 4;
}

message properties{
	uint32 local_datacenter_id = 1;
	uint32 retry_attempts = 2;
	uint32 metadata_server_timeout = 3;
	uint32 timeout_per_request = 4;
	uint64 start_time = 5;
	repeated Datacenter datacenters = 6;
	repeated Group groups = 7;
}

message MetaDataServer{
	bytes status = 1;
	bytes msg = 2;
	Placement placement_p = 3;
}
